# Competitive_analysis_crew_public

./: LICENSE  README.md  SUBMISSION_CHECKLIST.md  extract_report.py  pyproject.toml  pytest.ini  run_crew.py  run_tests.py  test_crew.py  test_crew_date_context.py  test_date_context.py
Competitive_analysis_crew/: crew.py  main.py
Competitive_analysis_crew/config/: llm_config.py
Competitive_analysis_crew/models/: analysis.py
Competitive_analysis_crew/tools/: market_analysis.py
src/Competitive_analysis_crew/: __init__.py
src/Competitive_analysis_crew/config/: __init__.py  agents.yaml  tasks.yaml
src/Competitive_analysis_crew/models/: __init__.py  company.py  research.py  validation.py
src/Competitive_analysis_crew/tools/: __init__.py  competitive_search.py  date_context.py  report_validation.py
tests/: README.md  __init__.py  test_tools.py
